--- a/index.htm
+++ b/index.htm
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="scroll-button">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <nav class="navbar">
         <div class="max-width">
             <div class="logo">YEKIS-<span>WORLD</span></div>
@@ -15,8 +19,8 @@
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#services">SERVICES</a></li>
-                <li><a href="#">SKILLS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="#skills">SKILLS</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
 
             <div class="menu-btn">
@@ -29,10 +33,17 @@
         <section class="home gradient-overlay" id="home">
             <div class="max-width">
                 <div class="home-content">
-                    <div class="text-1">Hello, my name is</div>
-                    <div class="text-2">Prakash Shahi</div>
-                    <div class="text-3">And I'm a <span class="typing"></span></div>
+                    <div class="text-1">
+                        <p>Hello, I'm <span>Onyeka</span> Welcome to my world</p>
+
+                    </div>
+                    <!-- <div class="text-2">Prakash Shahi</div> -->
+                    <!-- <div class="text-3">And I'm a <span class="typing"></span></div> -->
                     <a href="#contact">Hire me</a>
+                </div>
+
+                <div class="right">
+                    <img src='./images/mini-profile-bg-01.jpg'  alt="what I do" /> 
                 </div>
             </div>
         </section>
@@ -55,7 +66,7 @@
 
 
          <!-- services section start -->
-         
+
         <section class="services" id="services">
             <div class="max-width">
                 <h2 class="title">My services</h2>
@@ -77,7 +88,23 @@
                         <div class="card">
                             <div class="box">
                                 <i class="fas fa-code"></i>
-                                <div class="text">Apps Design</div>
+                                <div class="text">Mobile Application Development</div>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="box">
+                                <i class="fas fa-code"></i>
+                                <div class="text">Data Analysis</div>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="box">
+                                <i class="fas fa-code"></i>
+                                <div class="text">Network Security</div>
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                             </div>
                         </div>
